--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -6,8 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 </head>
 <body>
-    <h1>Hello Bro!</h1>
+    <div id="map"></div>
+    <div class="simulator">
+        <h2>Ambulance Simulator</h2>
+        <input type="number" id="ambulance-count" placeholder="No. of Ambulance">
+        <button id="getPositions">Get Updates</button>
+        <table id="ambulance-tracker" style="width:500px;"><tr><th>ID</th><th>Position</th><th>Speed</th></tr></table>
+    </div>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQHu8XTOwq4yDqrQSdiUDgeB-UqUrxqeg&callback=initMap">
+    </script>
+    <script src="{% static 'frontend/main.js' %}"></script>
 </body>
 </html>
